# python_image_search

./: .dockerignore  .gitignore  Dockerfile  README.md  db.json  main.py  pyproject.toml
scripts/: clip_mobile_export_onnx.py  clip_openai_demo.py  image_download.py
src/: body_prompt.py  clip_model.py  detect_pose.py  main.py  translation.py
