[project]
name = "python-image-search"
version = "0.1.0"
description = ""
authors = [
    {name = "quangnguyen"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "llm (>=0.24.2,<0.25.0)",
    "ipython (>=9.2.0,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
package-mode = false
